codegen for spec endpoint
